# wasm-bindgen-derive

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: wasm.rs
wasm-bindgen-derive/: Cargo.toml
wasm-bindgen-derive-macro/: Cargo.toml
wasm-bindgen-derive-macro/src/: lib.rs
wasm-bindgen-derive-macro/tests/: integration.rs
wasm-bindgen-derive/src/: helpers.rs  lib.rs
