[package]
name = "wasm-bindgen-derive-tests"
version = "0.0.0"
edition = "2021"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
license = "MIT"

[dependencies]
wasm-bindgen-derive = { path = "../wasm-bindgen-derive" }
wasm-bindgen = "0.2.85"
js-sys = "0.3.55"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
