[package]
name = "wasm-bindgen-derive-macro"
version = "0.3.0"
edition = "2021"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
license = "MIT"
description = "Proc-macro backend for wasm-bindgen-derive"
repository = "https://github.com/fjarri/wasm-bindgen-derive"
categories = ["no-std", "wasm"]
rust-version = "1.74.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
wasm-bindgen = "0.2.91"
js-sys = "0.3.55"
